# Edge-Cascade

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Heterogeneous LLM Inference Optimization.txt  LICENSE  PLAN-observability-tuning.md  PLAN-replay-and-metrics.md  PLAN.md  README.md  RUNBOOK.md  checks.dsl  cli.py  conftest.py  dashboard.py  docker-compose.yml  lookahead.py  package-lock.json  package.json  pyproject.toml  replay.py  requirements.txt  tsconfig.json  tsup.config.ts  validate_log.py  vs.py  webchat.py
.claude/: settings.json  settings.local.json
.claude/hooks/: pipeline_reminder.py
.claude/skills/edge-cascade/: SKILL.md
.claude/skills/edge-image/: SKILL.md
.claude/skills/experiment/: SKILL.md
.github/workflows/: ci.yml
bench/: bench_incremental.py  bench_phase1.py
cascade/: canvas_client.py  canvas_spike.py  celery_app.py  cloud_worker.py  config.py  credit_guard.py  degen_recorder.py  degeneration.py  degeneration_thresholds.json  feedback.py  flower_activity.py  gate.py  gpu_worker.py  image_worker.py  js_verifier.py  live_receiver.py  llama_worker.py  logfmt.py  lookahead.py  low_latency_pick.py  mesh.py  model_swap.py  npu_worker.py  orchestrator.py  review_ledger.py  reviewer.py  shell_verifier.py  tasks.py  topologies.py  topologies_canvas.py  topology_graph.py  ts_verifier.py  verifier.py  wiring.py
dashboard/: ecosystem.config.cjs  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
dashboard/scripts/: seed_replay.ts  ts-syntax-check.mjs
dashboard/src/: app.ts  flow.ts  page.ts  panels.ts  server.ts  store.ts  style.css
dashboard/src/lib/: liveSource.ts  logfmt.ts  tailer.ts
dashboard/test/: app.test.ts  e2e.test.ts  flow.test.ts  liveSource.test.ts  logfmt.test.ts  seed_replay.test.ts  store.test.ts  tailer.test.ts  util.ts
dashboard/test/fixtures/: regenerate.py  sample.parsed.json  sample.rec
demo/todomvc/: app.ts
docs/: BACKLOG.md  BARE-METAL-CELERY.md  CELERY-READINESS.md  DESIGN-celery-canvas.md  DESIGN-celery-phase2.md  DESIGN-observability-lanes.md  DESIGN-pd1-v2-hard-escalate.md  DESIGN-pd2-capture-risk-rule.md  DESIGN-verifier-registry.md  EXPERIMENT-context-precision-routing.md  FINDINGS-canvas-phase1.md  FINDINGS-canvas-phase2-low-latency.md  FINDINGS-canvas-repair-retry-spike.md  FINDINGS-celery-phase2-parity.md  FINDINGS-cli-model-selection.md  FINDINGS-cp5-detector-calibration.md  FINDINGS-dashboard-phase-a-build-retrospective.md  FINDINGS-debate-singer-trump.md  FINDINGS-edge-image-content-filter.md  FINDINGS-git-model-selection.md  FINDINGS-llm-vram-capability.md  FINDINGS-pd1-v1-runtime-verification.md  FINDINGS-pd1-v2-calibration.md  FINDINGS-pd1-v2-skip-repair.md  FINDINGS-pd1-v2-warn-prompt.md  FINDINGS-self-consistency-ambiguity.md  FINDINGS-tier3-repair-from-candidate-phase0.md  FINDINGS-warn-prompt-validation.md  PLAN-canvas-phase1.md  PLAN-canvas-test-hardening.md  PR-HANDBOOK.md  PRIORITIZATION.md
docs/diagrams/: canvas-dag.mmd
docs/findings/: FINDINGS-coder-r1-complementarity.md  FINDINGS-context-precision.md  FINDINGS-debate-kant-trump-gpu-duel.md  FINDINGS-debate-kant-trump.md  FINDINGS-debate-log-analysis.md  FINDINGS-llm-vram-capability.md  FINDINGS-persona-debate-OVERVIEW.md
evidence/2026-05-20/: MANIFEST.md  dashboard.json  replay.json
evidence/2026-05-20-1/: MANIFEST.md  dashboard.json  replay.json
evidence/2026-05-20-2/: MANIFEST.md  dashboard.json  replay.json
evidence/2026-05-21/: MANIFEST.md  dashboard.json  replay.json
mcp_servers/: __init__.py  _demo.py  _funcverify_child.py  _npu_worker_proc.py  _rec.py  cloud.py  gpu.py  npu.py  verify.py
projects/vinyl/: ARCHITECTURE.md  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
projects/vinyl/.github/workflows/: ci.yml
projects/vinyl/demo/todomvc/: db.ts  server.ts
projects/vinyl/spike/: serve.mjs
projects/vinyl/src/: ids.ts  index.ts  jsx-runtime.ts  live.ts  oob.ts  render.ts  vnode.ts  ws.ts
projects/vinyl/test/: jsx.test.ts  m5-actions.test.ts  m5-live.test.ts  oob.test.ts  render.test.ts  vnode.test.ts
runs/: verify_gpu_promote.py
runs/bench/: model_bench_20260523T143539Z.json  model_bench_20260523T145516Z.json
scripts/: _celery-worker.ps1  calibrate_degeneration_thresholds.py  cascade_live_receiver.py  cascade_top.py  celery_smoke.py  cli_model_bench.py  debate.py  debate_analysis.py  e2e_local.py  e2e_local.sh  edge-cli.ps1  edge_summary.py  git_model_bench.py  image_server.py  mesh_solve_canvas.py  model_bench.py  no-direct-push-to-main.sh  parity_batch.py  pr_review.py  probe_repair_path.py  probe_repair_path.sh  pt1_gpu_offload_check.py  sdxl.py  setup-dashboard-service.ps1  ship.py  smoke_npu_mcp.py  snapshot_evidence.py  start-worker-intel.ps1  start-worker-rtx.ps1  warn_prompt_validation_v2.py
src/: actions.ts  index.ts  jsx-dev-runtime.ts  render.ts  shell.ts  suspense.ts  vnode.ts
test/: ids.test.ts  m3-async.test.ts  m4-ws.test.ts  m5-todomvc.test.ts  smoke.test.ts
tests/: conftest.py  test_canvas_balanced.py  test_canvas_balanced_integration.py  test_canvas_budget.py  test_canvas_budget_integration.py  test_canvas_live_behavior.py  test_canvas_low_latency.py  test_canvas_spike.py  test_cloud_worker.py  test_config.py  test_credit_guard.py  test_dashboard.py  test_degen_recorder.py  test_degeneration.py  test_edge_summary.py  test_edge_summary_contract.py  test_feedback.py  test_flower_activity.py  test_funcverify_child.py  test_gate.py  test_image_spec.py  test_js_verifier.py  test_live_receiver.py  test_llama_worker.py  test_logfmt.py  test_lookahead.py  test_low_latency_pick.py  test_mesh.py  test_model_swap.py  test_orchestrator.py  test_replay.py  test_review_ledger.py  test_reviewer.py  test_sdxl.py  test_shell_verifier.py  test_smoke_imports.py  test_snapshot_evidence.py  test_tasks_cloud.py  test_tasks_gpu.py  test_tasks_npu.py  (+5 more)
