[project]
name = "edge-cascade"
version = "0.1.0"
description = "Multi-accelerator (NPU/GPU/cloud) inference cascade with verifier-gated escalation, look-ahead speculation, and a credit guard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# The Intel NPU/iGPU stack. Heavy + platform-specific; not needed to run the
# test suite (the gated modules import it lazily / not at all).
#   uv sync --extra accel
accel = [
    "openvino-genai==2026.1.*",
    "huggingface-hub>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.14",
    "pre-commit>=4",
    "ruff>=0.8",
    "bandit>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "models", "runs"]

[tool.ruff.lint]
# Pragmatic set: pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B),
# pyupgrade (UP). Quiet a few that fight an exploratory single-dev codebase.
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    "E741",   # ambiguous var names (l/I) - used in terse helpers
    "B008",   # function call in arg default (dataclass field(default_factory=...))
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]   # long assertion lines are fine in tests

# Bandit security scan. Triage policy (enforced by reviewers, encoded here):
#   * We scan ONLY our own code (cascade/ + root scripts). Dependencies are
#     never scanned, so low-severity findings in third-party code are ignored
#     by construction.
#   * The pre-commit hook fails on MEDIUM/HIGH ("major") findings -- these
#     must be analysed and explicitly resolved (justified `# nosec BXXX`,
#     replace, or upgrade) before the commit can land. LOW is reported, not
#     blocking.
[tool.bandit]
exclude_dirs = [".venv", "tests", "models", "runs", ".git"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["cascade"]
branch = true
# Hardware (NPU/Ollama), orchestration, and entrypoints need real devices,
# network, or a running __main__/HTTP loop. Mock-theater there adds risk, not
# safety, so the 100% gate is scoped to the pure, safety-critical logic:
# config, the repair-feedback protocol, the verifier, and the cloud
# credit-guard / cost math. See README "Test coverage policy".
omit = [
    "cascade/__init__.py",
    "cascade/npu_worker.py",
    "cascade/gpu_worker.py",
    "cascade/orchestrator.py",
    "cascade/lookahead.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = ['if __name__ == "__main__":']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cascade"]
