[project]
name = "edge-cascade"
version = "0.1.0"
description = "Multi-accelerator (NPU/GPU/cloud) inference cascade with verifier-gated escalation, look-ahead speculation, and a credit guard."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# The Intel NPU/iGPU stack. Heavy + platform-specific; not needed to run the
# test suite (the gated modules import it lazily / not at all).
#   uv sync --extra accel
accel = [
    "openvino-genai==2026.1.*",
    "huggingface-hub>=0.27",
]
# The MCP server interface (mcp_servers/). Exposes each tier as an MCP server
# the Claude Code agent drives as the Central Architecture Router.
#   uv sync --extra mcp
mcp = [
    "mcp>=1.2",
]
# The Celery Canvas substrate (C1 spike). Opt-in; pipes stay the default. Redis
# is BOTH broker and result backend (Phase-0 decision 2026-05-22 -- one service,
# revisit RabbitMQ only at the durability/multi-box decision gate).
#   uv sync --extra celery   +   docker compose up -d redis
celery = [
    "celery[redis]>=5.4",
]
# The edge-image tier (C2): SDXL via diffusers on the NVIDIA GPU, behind a tiny
# FastAPI server. Opt-in + heavy. NOTE torch on Windows: the default PyPI wheel
# may be CPU-only -- install the CUDA build explicitly, e.g.
#   uv pip install torch --index-url https://download.pytorch.org/whl/cu124
#   uv sync --extra imagegen   (then verify torch.cuda.is_available())
imagegen = [
    "torch>=2.2",
    "diffusers>=0.30",
    "transformers>=4.44",
    "accelerate>=0.33",
    "safetensors>=0.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.14",
    "pre-commit>=4",
    "ruff>=0.8",
    "bandit>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "models", "runs"]

[tool.ruff.lint]
# Pragmatic set: pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B),
# pyupgrade (UP). Quiet a few that fight an exploratory single-dev codebase.
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    "E741",   # ambiguous var names (l/I) - used in terse helpers
    "B008",   # function call in arg default (dataclass field(default_factory=...))
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]   # long assertion lines are fine in tests

# Bandit security scan. Triage policy (enforced by reviewers, encoded here):
#   * We scan ONLY our own code (cascade/ + root scripts). Dependencies are
#     never scanned, so findings in third-party code are ignored by construction.
#   * LOOSE BY DESIGN: edge-cascade is a LOCAL, sandboxed, single-user runtime,
#     not a network-exposed service, so routine/defensive-hardening findings are
#     noise here. The gate (pre-commit hook + CI) blocks ONLY on egregious
#     findings -- HIGH severity AND HIGH confidence (--severity-level high
#     --confidence-level high). Anything below that is reported, never blocking.
#     An egregious finding must be analysed and explicitly resolved (justified
#     `# nosec BXXX`, replaced, or the dep upgraded) before the commit can land.
[tool.bandit]
exclude_dirs = [".venv", "tests", "models", "runs", ".git"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["cascade", "scripts"]
branch = true
# Hardware (NPU/Ollama), orchestration, and entrypoints need real devices,
# network, or a running __main__/HTTP loop. Mock-theater there adds risk, not
# safety, so the 100% gate is scoped to the pure, safety-critical logic:
# config, the repair-feedback protocol, the verifier, the cloud credit-guard /
# cost math, AND scripts/edge_summary.py (added 2026-05-26 -- the SD-1 launch
# summary's silent-failure modes are exactly the kind of "diagnostic looks
# fine, real signal lost" gap the gate exists to prevent). Other scripts/
# entries remain out-of-scope: pr_review.py / probe_repair_path.py / *_smoke
# are live/hardware/interactive, not unit-coverable. See README "Test coverage
# policy".
omit = [
    "cascade/__init__.py",
    "cascade/npu_worker.py",
    "cascade/gpu_worker.py",
    "cascade/image_worker.py",
    "cascade/orchestrator.py",
    "cascade/lookahead.py",
    # Celery substrate: needs a running broker + the hardware workers, like the
    # MCP servers. Opt-in (the `celery` extra) and live-validated, not unit-cov'd.
    "cascade/celery_app.py",
    "cascade/tasks.py",
    "cascade/canvas_spike.py",
    "cascade/topologies_canvas.py",
    "cascade/canvas_client.py",
    "mcp_servers/*",
    # scripts/: only edge_summary.py is in-scope. Everything else is
    # live/hardware/interactive (paid API, MCP stdio probes, SDXL server,
    # benchmark drivers) -- live-validated, not unit-coverable.
    "scripts/celery_smoke.py",
    "scripts/debate.py",
    "scripts/debate_analysis.py",
    "scripts/e2e_local.py",
    "scripts/image_server.py",
    "scripts/model_bench.py",
    "scripts/pr_review.py",
    "scripts/probe_repair_path.py",
    "scripts/ship.py",
    "scripts/smoke_npu_mcp.py",
    "scripts/snapshot_evidence.py",
    "scripts/skip_repair_validation.py",
    "scripts/warn_prompt_validation_v2.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = ['if __name__ == "__main__":']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cascade"]
